--- a/RationShop/AdminApp/templates/Index.html
+++ b/RationShop/AdminApp/templates/Index.html
@@ -127,6 +127,20 @@
                             <span class="hide-menu">View Messages</span>
                         </a>
                     </li>
+
+                    <li class="nav-small-cap">
+                        <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+                        <span class="hide-menu">Order Details</span>
+                    </li>
+                    <li class="sidebar-item">
+                        <a class="sidebar-link" href="{% url 'OrderDetails' %}" aria-expanded="false">
+                <span>
+                  <i class="ti ti-cards"></i>
+                </span>
+                            <span class="hide-menu">View Orders</span>
+                        </a>
+                    </li>
+
                     <li class="sidebar-item">
                         <a class="sidebar-link" href="./ui-forms.html" aria-expanded="false">
                 <span>
