--- a/RationShop/WebApp/templates/SingleProduct.html
+++ b/RationShop/WebApp/templates/SingleProduct.html
@@ -89,8 +89,10 @@
                                     <a class="nav-link" href="{% url 'Products' %}">Ration</a>
                                 </li>
 
-                                <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'CartPage' %}">Cart</a>
+                               <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'CartPage' %}" style="position:relative;">Cart
+                                    <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
+                              style="top: -12px; left: 55px; height: 20px; min-width: 20px;">{{ x }}</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'OrderPage' %}">Orders</a>
@@ -181,6 +183,7 @@
 
                         <!-- Read-only quantity field -->
                         <input
+                                name="quant"
                                 readonly
                                 id="quantity"
                                 type="number"
