--- a/RationShop/WebApp/templates/ContactUs.html
+++ b/RationShop/WebApp/templates/ContactUs.html
@@ -74,11 +74,16 @@
                                     <a class="nav-link" href="{% url 'Products' %}"> Ration </a>
                                     {% elif request.session.Reg_Num %}
                                     <a class="nav-link" href="{% url 'ShopStock' %}"> Stock </a>
+                                    {% elif request.session.delivery_partner %}
+                                    <a class="nav-link" href="{% url 'Delivery_Partner' %}">Delivery Home</a>
                                     {% endif %}
-                                </li>
 
+                                </li>
+                                {% if request.session.Ration_Card or request.session.Reg_Num %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'CartPage' %}">Cart</a>
+                                    <a class="nav-link" href="{% url 'CartPage' %}" style="position:relative;">Cart
+                                    <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
+                              style="top: -12px; left: 55px; height: 20px; min-width: 20px;">{{ x }}</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'OrderPage' %}">Orders</a>
@@ -89,6 +94,14 @@
                                 <li class="nav-item active">
                                     <a class="nav-link" href="{% url 'ContactUs' %}">Contact Us</a>
                                 </li>
+                                {% elif request.session.delivery_partner %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'About' %}">About</a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="{% url 'ContactUs' %}">Contact Us</a>
+                                </li>
+                                {% endif %}
 
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button"
@@ -125,7 +138,13 @@
                                         {% endif %}
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
+                                        <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
 
+                                        {% elif request.session.delivery_partner %}
+                                        <h2 style="text-align:center;">Hi,{{request.session.delivery_partner}}</h2>
+
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
                                         {% else %}
                                         <a class="dropdown-item" href="{% url 'LoginPage' %}">Login</a>
                                         {% endif %}
