--- a/RationShop/WebApp/templates/ShopHome.html
+++ b/RationShop/WebApp/templates/ShopHome.html
@@ -208,7 +208,9 @@
                                     <a class="nav-link" href="{% url 'ShopStock' %}">Stock</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'CartPage' %}">Cart</a>
+                                    <a class="nav-link" href="{% url 'CartPage' %}" style="position:relative;">Cart
+                                    <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
+                              style="top: -12px; left: 55px; height: 20px; min-width: 20px;">{{ x }}</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'OrderPage' %}">Orders</a>
@@ -234,7 +236,7 @@
                                             <a href="{% url 'MyDetails' det.id %}">My Details</a>
                                         </button>
                                         <button class="dropdown-item">
-                                            <a href="{% url 'Delivery_Partner' %}">Delivery</a>
+                                            <a href="{% url 'Delivery_SignUp' %}">Delivery</a>
                                         </button>
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
